--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,19 @@
 .siteContainer 
 {
     display: flex;
+    flex-direction: column;
     align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+}
+.header
+{
+    flex-direction: row;
+    
+}
+.infoBody
+{
+    background-color: aqua;
 }
