--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,66 @@
-.siteContainer 
-{
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
+html, body, .viewport {
     width: 100%;
     height: 100%;
-    background-color: blue;
+    margin: 0;
 }
-.header
-{
+#container {
+    display: flex; 
+    flex-direction: row; 
+    height: inherit;
+    width: inherit; 
+}
+#sideMenuBar {
+    display: flex;
+    flex-direction: column;
+    flex: 1; 
+    background-color: rgb(154, 185, 212);
+    border-right: 1px solid black;  
+    justify-content: center; 
+}
+#profilePhoto {
+    width: 250px;
+    border-radius: 50%;
+    align-self: center;
+}
+#profileTitle {
+    text-align: center;
+    margin-top: -10px;
+}
+#profileName {
+    text-align: center;
+}
+#linksList {
+    align-self: center;
+}
+p {
+    text-align: center; 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    word-wrap: unset;  
+}
+
+
+#sideMenuBarEmail {
+    flex: 2;
+    align-self: baseline;  
+    margin-left: 20px; 
+    color: black; 
+}
+#sideMenuBarLinks {
+    display: flex; 
+    flex: 1;
+    justify-content: flex-end;
+}
+#midSection {
+    display: flex; 
+    margin-left: -10px; 
+    margin-right: -10px; 
+    justify-content: center;
+    background-color: white;
+    flex: 3;  
+}
+#profileSection {
+    display: flex; 
     flex-direction: row;
-    
-}
-.infoBody
-{
-    background-color: aqua;
+    width: 50%;
+    flex-wrap: inherit; 
 }
